removing fixed position
add scrollbar

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 #content-main {
 	background: #fff;
-	position: fixed;
+	/*position: fixed;*/
 	top: 0;
 	left: 0;
 	right: 0;
